--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/mosesbalaji/list-repo-secret/issues"
   },
-  "homepage": "https://github.com/mosesbalaji/list-repo-secret#readme"
+  "homepage": "https://github.com/mosesbalaji/list-repo-secret#readme",
+  "dependencies": {
+    "@actions/core": "^1.6.0",
+    "@actions/io": "^1.1.1",
+    "fs": "^0.0.1-security",
+    "json2csv": "^5.0.6",
+    "path": "^0.12.7"
+  }
 }
