--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,6 @@ jobs:
         with:
           token: ${{ secrets.OCTODEMO_TEMP_TOKEN }}
           organization: ${{ github.event.inputs.organization }}
+      - name: Results
+        run: |
+          echo "Inactive user list for last ${{ github.event.outputs.organizationinp }} days"
