--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,4 @@ jobs:
           token: ${{ secrets.OCTODEMO_TEMP_TOKEN }}
           organization: ${{ github.event.inputs.organization }}
       - name: Results
-        run: |
-          echo "Inactive user list for last ${{ github.event.outputs.usercount }} days"
+        run: ${{ github.event.outputs.usercount }}
