--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mosesbalaji/list-repo-secret#readme",
   "dependencies": {
     "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
     "@actions/io": "^1.1.1",
     "fs": "^0.0.1-security",
     "json2csv": "^5.0.6",
